fix: loader screen icon alignment

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -152,7 +152,7 @@ h6 {
     &::before {
       content: url(/svgs/quote.svg);
       position: absolute;
-      top: -40%;
+      top: -25%;
       left: -1rem;
       width: 6.25rem;
       display: inline-block;
